overflow issue resolved

--- a/src/css/Home/questionCard.css
+++ b/src/css/Home/questionCard.css
@@ -1,35 +1,38 @@
 .question-card {
   height: 50px;
-  width: 100%;
+  width: calc(100%);
   display: flex;
   background: #006266;
   border-bottom: 1px solid white;
   color: white;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px -50px 36px -28px inset;
 }
 
 .question-card .hp {
-  padding: 5px;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .question-card .que-srno {
-  width: 10%;
+  width: calc(10%);
   border-right: 1px solid white;
 }
 
 .question-card .que-ques {
-  width: 33%;
+  width: calc(33%);
   border-right: 1px solid white;
 }
 
 .question-card .que-algo {
-  width: 30%;
+  width: calc(30%);
   border-right: 1px solid white;
 }
 
 .question-card .que-level {
-  width: 33%;
+  width: calc(33%);
 }
